--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -74,6 +74,8 @@
                <img src="images/bridge.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
+			   <p>The smallest word can bring tears to my eyes, while at other times I find myself gritting my teeth and walking a long distance.</p>
+			
                <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. My dissertation committee members are: Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/jay-puckett/">Jay Puckett</a>, Dr. <a href="https://engineering.unl.edu/daniel-linzell/">Daniel Linzell</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/george-morcous/">George Morcous</a>.
 			   I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey Laman</a>, who was retired in July 2021. Before that, I obtained my bachelor's degree in Bridge Engineering from Changsha University of Science and Technology (长沙理工大学).</p>
 
