--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -44,9 +44,10 @@
                <li><a href="#three">Research Projects</a></li>
                <li><a href="#four">Course Projects</a></li>
 			   <li><a href="#five">Publications</a></li>             
-               <li><a href="#six">Mentoring and teaching</a></li>
+               <li><a href="#six">Mentoring and Teaching</a></li>
                <li><a href="#seven">Awards</a></li>
-			   <li><a href="#Eight">Presentations</a></li>
+			   <li><a href="#eight">Presentations</a></li>
+			   <li><a href="#nine">Reading List</a></li>
                
             </ul>
          </nav>
@@ -211,7 +212,7 @@
          <!-- Six -->
          <section id="six">
             <div class="container">
-               <h3> Mentoring and teaching </h3>
+               <h3> Mentoring and Teaching </h3>
 			   <ul> Undergraduatestudent Research Mentoring
                <li>
 					<strong> [Summer 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
@@ -243,7 +244,7 @@
          </section>
 		 
 		 <!-- Eight -->
-         <section id="seven">
+         <section id="eight">
             <div class="container">
                <h3> Presentations </h3>
                <ul>
@@ -253,6 +254,23 @@
             </div>
          </section>         
         
+		 <!-- Nine -->
+         <section id="nine">
+            <div class="container">
+               <h3> Reading List </h3>
+               <ul>
+                   <li>Introduction to Algorithms, 3rd edition, Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein </li>
+				   <li>Introduction to Machine Learning with Python: A Guide for Data Scientists, 1st edition, Andreas Müller, Sarah Guido</li>	
+				   <li>Deep Learning with Python, 2nd edition, François Chollet</li>
+				   <li>Mathematics for Machine Learning, 1st edition, Marc Peter Deisenroth</li>		
+				   <li>The Three-Body Problem, Cixin Liu(Author), Ken Liu (Translator)</li>	
+			   </ul>
+            </div>
+         </section>     		
+		
+		
+		
+		
          <!-- Footer -->
          <section id="footer">
             <div class="container">
