--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -75,7 +75,7 @@
                <img src="images/bridge.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
-			   <p><strong> My life motto is 'Sometimes, heartbroken frustration brings tears to my eyes, but most of the time, I find myself gritting my teeth and already walking a long way.'.</strong></p>
+			   <p><strong> My life motto is 'Sometimes, heartbroken frustration brings tears to my eyes, but most of the time, I find myself gritting my teeth and already walking a long way.'</strong></p>
                <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. My dissertation committee members are: Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/jay-puckett/">Jay Puckett</a>, Dr. <a href="https://engineering.unl.edu/daniel-linzell/">Daniel Linzell</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/george-morcous/">George Morcous</a>.
 			   I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey Laman</a>, who was retired in July 2021. Before that, I obtained my bachelor's degree in Bridge Engineering from Changsha University of Science and Technology (长沙理工大学).</p>
 
@@ -259,7 +259,8 @@
             <div class="container">
                <h3> Reading List </h3>
                <ul>
-                   <li>Introduction to Algorithms, 3rd edition, Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein </li>
+                   <li>Introduction to Algorithms, 3rd edition, Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, 
+				    Clifford Stein </li>
 				   <li>Introduction to Machine Learning with Python: A Guide for Data Scientists, 1st edition, Andreas Müller, Sarah Guido</li>	
 				   <li>Deep Learning with Python, 2nd edition, François Chollet</li>
 				   <li>Mathematics for Machine Learning, 1st edition, Marc Peter Deisenroth</li>		
