--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -261,7 +261,8 @@
                <ul>
                    <li>Introduction to Algorithms, 3rd edition, Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, 
 				    Clifford Stein </li>
-				   <li>Introduction to Machine Learning with Python: A Guide for Data Scientists, 1st edition, Andreas Müller, Sarah Guido</li>	
+				   <li>Introduction to Machine Learning with Python: A Guide for Data Scientists, 1st edition, 
+				    Andreas Müller, Sarah Guido</li>	
 				   <li>Deep Learning with Python, 2nd edition, François Chollet</li>
 				   <li>Mathematics for Machine Learning, 1st edition, Marc Peter Deisenroth</li>		
 				   <li>The Three-Body Problem, Cixin Liu(Author), Ken Liu (Translator)</li>	
