--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -263,6 +263,7 @@
 				    Clifford Stein </li>
 				   <li>Introduction to Machine Learning with Python: A Guide for Data Scientists, 1st edition, 
 				    Andreas Müller, Sarah Guido</li>	
+				   <li>Code Complete, 2nd edition, Steve McConnell</li>
 				   <li>Deep Learning with Python, 2nd edition, François Chollet</li>
 				   <li>Mathematics for Machine Learning, 1st edition, Marc Peter Deisenroth</li>		
 				   <li>The Three-Body Problem, Cixin Liu(Author), Ken Liu (Translator)</li>	
