--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -88,7 +88,7 @@
                   <a href="mailto:byang11@huskers.unl.edu">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/bowenyang2022/">LinkedIn</a> &nbsp/&nbsp
-                  <a href="images/CV.pdf">CV</a> &nbsp/&nbsp 
+                  <a href="images/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp 
                </p>
             </div>
          </section>
