--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -88,7 +88,7 @@
                   <a href="mailto:byang11@huskers.unl.edu">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/bowenyang2022/">LinkedIn</a> &nbsp/&nbsp
-                  <a href="images/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp 
+                  <a href="images/CV.pdf">CV</a> &nbsp/&nbsp 
                </p>
             </div>
          </section>
@@ -123,13 +123,13 @@
          <section id="three">
             <div class="container">
                <h3>Research Projects</h3>
-               My primary research interests are in the fields of Natural Language Processing, Machine Learning, Artificial Intelligence, with broader interests in Statistical Learning, Computer Vision, and AI-Powered Social Intelligence.
+               My primary research projects during PhD life have been focused on structural reliability for truck platoons and diagnostic load testing validated with finite element analysis.
                
 	<div class="features">
                                         <article>
 											<a href="#" class="image"><img src="images/ServiceIII.png" alt="" /></a>
 											<div class="inner">
-												<h4>Truck platoon effects on girder bridges: Service Limit State</h4>
+												<h4>Truck platoon effects on girder bridges</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">Most of the previous federated learning work has focused on a difference in the distribution of labels. Unlike those settings, we address an important problem of FL, e.g., different scanner/sensors in medical imaging, where local clients may store examples with different marginal or conditional feature distributions compared to other nodes, which we denote as feature shift non-iid.  In this work, we propose an effective method that uses local batch normalization to alleviate the feature shift before averaging models. </p>
 											</div>
 										</article>
