--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -130,15 +130,15 @@
 											<a href="#" class="image"><img src="images/RP1.png" alt="" /></a>
 											<div class="inner">
 												<h4>Truck platoon effects on girder bridges</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">Most of the previous federated learning work has focused on a difference in the distribution of labels. Unlike those settings, we address an important problem of FL, e.g., different scanner/sensors in medical imaging, where local clients may store examples with different marginal or conditional feature distributions compared to other nodes, which we denote as feature shift non-iid.  In this work, we propose an effective method that uses local batch normalization to alleviate the feature shift before averaging models. </p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">Truck platooning—digitally linking two or more trucks to travel in a closely spaced convoy—is an emerging technology with the potential to save fuel and reduce labor. A framework is described to determine how much a platoon permit load might be increased above Federal Bridge Formula B legal limits, given strict control over the load characteristics and operational tactics. Soon, platoons are expected to advance not only with respect to traffic operations but also in their ability to weigh and report axle weight and spacing, functioning as mobile weigh-in-motion vehicles. Consequently, platoon live load statistics (bias and coefficient of variation) can differ from code assumptions, and are perhaps controllable, which poses a significant opportunity with respect to operational strategies(Strength and Service).</p>
 											</div>
 										</article>
 										
 										<article>
 											<a href="#" class="image"><img src="images/RP2.png" alt="" /></a>
 											<div class="inner">
-												<h4>Truck platoon effects on girder bridges: Strength Limit State</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">We present a privacy-preserving federated learning framework for multi-site fMRI analysis. To overcome the domain shift issue, we have proposed two strategies: MoE and adversarial domain alignment to boost federated learning model performance.  We have shown federated learning performance can potentially be boosted by adding domain adaptation and discussed the condition of benefits. Our approach brings new hope for accelerating deep learning applications in the field of medical imaging, where data isolation and the emphasis on data privacy have become challenges.</p>
+												<h4>Outdoor Laboratory and Testbed for Bridge Health</h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;">Due to the aging problem of bridges and the limited financial resources in the United States, it is necessary to form a deeper understanding of existing, aging bridges in an effort to extend their inservice life. This data contributed to the generation of finite element analysis models for each bridge, which were used to anticipate bridge response under various loading patterns, and were validated using measured ambient vibration tests. Live load demonstrations were further performed for each bridge under various traffic loads.</p>
 											</div>
 										</article>
 								
