--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -130,7 +130,7 @@
 											<a href="#" class="image"><img src="images/RP1.png" alt="" /></a>
 											<div class="inner">
 												<h4>Truck platoon effects on girder bridges</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">Truck platooning—digitally linking two or more trucks to travel in a closely spaced convoy—is an emerging technology with the potential to save fuel and reduce labor. A framework is described to determine how much a platoon permit load might be increased above Federal Bridge Formula B legal limits, given strict control over the load characteristics and operational tactics. Soon, platoons are expected to advance not only with respect to traffic operations but also in their ability to weigh and report axle weight and spacing, functioning as mobile weigh-in-motion vehicles. Consequently, platoon live load statistics (bias and coefficient of variation) can differ from code assumptions, and are perhaps controllable, which poses a significant opportunity with respect to operational strategies(Strength and Service).</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">Truck platooning, in which two or more trucks travel in a closely spaced convoy, is an emerging technology that could save fuel and reduce labor costs. The majority of research compares the live load demands of bridges directly to truck platoon load effects without considering reliability. We differed from the previous research by varying the platoon live load statistics (bias and coefficient of variation) and conducting reliability analysis in order to potentially increase the platoon weights while still maintaining the safety reliability indices. We developed summary headway guidance to illustrate potential safe operational strategies for varying truck weights and platoon live load effect uncertainties, which can be used for future truck platoon operation guidance.</p>
 											</div>
 										</article>
 										
@@ -138,7 +138,7 @@
 											<a href="#" class="image"><img src="images/RP2.png" alt="" /></a>
 											<div class="inner">
 												<h4>Outdoor Laboratory and Testbed for Bridge Health</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">Due to the aging problem of bridges and the limited financial resources in the United States, it is necessary to form a deeper understanding of existing, aging bridges in an effort to extend their inservice life. This data contributed to the generation of finite element analysis models for each bridge, which were used to anticipate bridge response under various loading patterns, and were validated using measured ambient vibration tests. Live load demonstrations were further performed for each bridge under various traffic loads.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">Because American bridges are aging and financial resources are limited, it is necessary to understand existing, aging bridges in order to extend their useful lives. We performed diagnostic live load tests on three out-of-service bridges. From sensors attached to bridge girders, micro strain data was collected, which contributed to the development of finite element simulation models for each bridge, which were used to anticipate bridge response under various loading patterns, and were validated by measuring ambient vibrations. </p>
 											</div>
 										</article>
 								
