--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -130,7 +130,7 @@
 											<a href="#" class="image"><img src="images/RP1.png" alt="" /></a>
 											<div class="inner">
 												<h4>Truck platoon effects on girder bridges</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">Truck platooning, in which two or more trucks travel in a closely spaced convoy, is an emerging technology that could save fuel and reduce labor costs. The majority of research compares the live load demands of bridges directly to truck platoon load effects without considering reliability. We differed from the previous research by varying the platoon live load statistics (bias and coefficient of variation) and conducting reliability analysis in order to potentially increase the platoon weights while still maintaining the safety reliability indices. We developed summary headway guidance to illustrate potential safe operational strategies for varying truck weights and platoon live load effect uncertainties, which can be used for future truck platoon operation guidance.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">Most of research compared the live load demands of bridges directly to truck platoon load effects without considering reliability. We differed from the previous research by varying the platoon live load statistics (bias and coefficient of variation) and conducting reliability analysis in order to potentially increase the platoon weights while still maintaining the safety reliability indices. We developed summary headway guidance to illustrate potential safe operational strategies for varying truck weights and platoon live load effect uncertainties.</p>
 											</div>
 										</article>
 										
@@ -158,14 +158,14 @@
 										<article>
 											<a href="#" class="image"><img src="images/CP1.png" alt="" /></a>
 											<div class="inner">
-												<h4>BrainGNN: Explainable Graph Neural Network for Neuroimaging Analysis</h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">BrainGNN takes graphs built from neuroimages as inputs, and then outputs prediction results together with interpretation results.With the built-in interpretability, BrainGNN not only performs better on prediction than alternative methods, but also detects salient brain regions associated with predictions and discovers brain community patterns.</p>
+												<h4></strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/"> CIVE 881 - Computational Problem Solving In Civil Engineering</a> </h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;">In this report, I introduce matrix operations, ordinary differential equations, optimization, curve fitting, numerical differentiation and integration, and finite difference methods. In particular, this project utilized the numerical methods (such as Euler's Forward Method and Centered Difference Method) to predict the displacement of a one-story building subjected to free vibrations. </p>
 											</div>
 										</article>
                                         <article>
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
-												<h4>DistDeepSHAP: Efficient Shapley Explanation for Feature Importance Estimation Under Uncertainty</h4>
+												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 881 - Practical Machine Learning</a</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">We propose DistDeepSHAP, a post-hoc feature importance estimation method under uncertainty evaluation for deep learning models.First, it can obtain uncertainty estimates for the provided feature importance scores. Second, it can better utilize the empirical distribution and has the potential for better feature importance scores estimation from the generated percentile saliency maps. Last but not least, it can compare with arbitrary subgroup references and interpret subgroup salient features, which is crucial for medical image study.</p>
 											</div>
 										</article>
