--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -165,7 +165,7 @@
                                         <article>
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
-												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 881 - Practical Machine Learning</a</h4>
+												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 881 - Practical Machine Learning</a></h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">We propose DistDeepSHAP, a post-hoc feature importance estimation method under uncertainty evaluation for deep learning models.First, it can obtain uncertainty estimates for the provided feature importance scores. Second, it can better utilize the empirical distribution and has the potential for better feature importance scores estimation from the generated percentile saliency maps. Last but not least, it can compare with arbitrary subgroup references and interpret subgroup salient features, which is crucial for medical image study.</p>
 											</div>
 										</article>
