--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
          <section id="four">
             <div class="container">
                <h3>Course Projects</h3>
-               My course projects at UNL are related to Numerical Finite Analysis and practical Machine Learning.
+               My course projects at UNL are related to Numerical Finite Analysis and Practical Machine Learning.
                
 	<div class="features">
                                      
