--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <!-- One -->
          <section id="one">
             <div class="image main" data-position="center">
-               <img src="images/bridge4.jpg" alt="Golden gate bridge" />
+               <img src="images/bridge2.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
 			   <p><strong> My life motto is 'Life may not be as good as you think, but it's not as bad either.'</strong></p>
@@ -166,7 +166,7 @@
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 891 - Practical Machine Learning</a></h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;"> The course projects include applying machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, and DT) to unstandardized/standardized and biased/unbiased data using Python packages such as numpy, pandas, seaborn, matplotlib, sklearn, and tensorflow. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;"> The course projects include applying machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, and DT) to unstandardized/standardized and biased/unbiased data using Python packages such as <strong> numpy, pandas, seaborn, matplotlib, sklearn, and tensorflow </strong>. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>codes</strong></a>.</p>
 											</div>
 										</article>
 									</div>
