--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section id="header">
          <header>
             <span class="image avatar"><img src="images/BY.jpg" alt="" /></span>
-            <h1 id="logo"><a href="#">Bowen Yang 杨博闻</a></h1>
+            <h1 id="logo"><a href="#">Bowen Yang</a></h1>
             <!--p> PhD candidate<br />
                University of Nebraska-Lincoln, Lincoln<br />
                     </p--> 
