--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 891 - Practical Machine Learning</a></h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;"> The course projects include applying machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, and DT) to unstandardized/standardized and biased/unbiased data using Python packages such as <strong> numpy, pandas, seaborn, matplotlib, sklearn, and tensorflow </strong>. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;"> The course projects include applying supervised machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, DT and RD) to unstructured and structured data using Python packages such as <strong> numpy, pandas, seaborn, matplotlib, sklearn, keras and tensorflow </strong>. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>codes</strong></a>.</p>
 											</div>
 										</article>
 									</div>
@@ -215,15 +215,14 @@
                <h3> Mentoring and Teaching </h3>
 			   <ul> Undergraduatestudent Research Mentoring
                <li>
-					<strong> [Summer 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
+					<strong> [Summers 2021 & 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Giovanni Ortiz, San Jose State University<br>
-					<strong> [Summer 2021] </strong> <a href="images/REU2021.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Joshua Trimm, Texas A&M University-Kingsville<br>
 			   </li>
 			        Teaching Assitant
                <li>
-					<strong> [Spring 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a><br> 
-					<strong> [Spring 2021] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a> 
+					<strong> [Springs 2021 & 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a><br> 
+					<strong> [Spring 2021] </strong> <a href="images/Sample_solution.pdf"> Sample Solution</a> 
 			   </li>			   	  		   
 			   </ul>
             </div>
@@ -248,7 +247,7 @@
             <div class="container">
                <h3> Presentations </h3>
                <ul>
-                   <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf">slides</a>]</li>
+                   <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf"><strong>slides</strong></a>]</li>
 				   <li>Truck platoon effects on girder bridges, UNL Graduate student symposium, February 2022</li>
 			   </ul>
             </div>
