--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 											<a href="#" class="image"><img src="images/CP1.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://canvas.unl.edu/courses/102086"> ENGE 891 - Practical Machine Learning</a></h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;"> The course projects include applying supervised machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, DT and RD) to unstructured and structured data using Python packages such as <strong> numpy, pandas, seaborn, matplotlib, sklearn, keras and tensorflow </strong>. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;"> This course projects include applying supervised machine learning technologies (KNN, Linear Regression, Logistic Regression, SVM, MLP, DT and RD) to unstructured and structured data using Python packages such as <strong> numpy, pandas, seaborn, matplotlib, sklearn, keras and tensorflow </strong>. Here is a link to the project <a href="https://github.com/Bowen2022/Practical-Machine-Learning-Course-Projects"><strong>report and codes</strong></a>.</p>
 											</div>
 										</article>	
              										
@@ -167,7 +167,7 @@
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://catalog.unl.edu/graduate-professional/courses/mech/"> MECH 942 - Theory of Plasticity</a> </h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature by using MATLABT. The stress and entropy responses for four thermal loadings were calculated. The developed model generally predicts responses well and can potentially be applied to more loadings. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature by using MATLABT. The stress and entropy responses for four thermal loadings were calculated. The developed model generally predicts responses well. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
 											</div>
 										</article>
 
@@ -175,7 +175,7 @@
 											<a href="#" class="image"><img src="images/CP3.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/"> CIVE 881 - Computational Problem Solving In Civil Engineering</a> </h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">This project report introduces matrix operations, ordinary differential equations, optimization, curve fitting, numerical differentiation, and finite difference methods. In particular, this project applied numerical methods (such as Euler's Forward Method and Centered Difference Method) to predict the displacement of a one-story building. It has been demonstrated that the results of the numerical analysis are similar to those of the analytical analysis when small time steps are taken. Here is a link to the project <a href="images/CIVE881Project"><strong>report and codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">This project report introduces matrix operations, ordinary differential equations, optimization, curve fitting, numerical differentiation, and finite difference methods. In particular, this project applied numerical methods (such as Euler's Forward Method and Centered Difference Method) to predict the displacement of a one-story building. It has been demonstrated that the results of the numerical analysis are similar to those of the analytical analysis when small time steps are taken. Here is a link to the project <a href="images/CIVE881Project.pdf"><strong>report and codes</strong></a>.</p>
 											</div>
 										</article>
 										
@@ -225,18 +225,18 @@
          <section id="six">
             <div class="container">
                <h3> Mentoring and Teaching </h3>
-			   <ol> Undergraduatestudent Research Mentoring
+			   <ul> <strong><i>Undergraduatestudent Research Mentoring</i></strong>
                <li>
 					<strong> [Summers 2021 & 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Giovanni Ortiz, San Jose State University<br>
 						-Joshua Trimm, Texas A&M University-Kingsville<br>
 			   </li>
-			        Teaching Assitant
+			        <strong><i>Teaching Assitant</i></strong>
                <li>
 					<strong> [Springs 2021 & 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a><br> 
 					<strong> [Spring 2021] </strong> <a href="images/Sample_solution.pdf"> Sample Solution</a> 
 			   </li>			   	  		   
-			   </ol>
+			   </ul>
             </div>
          </section>
 		 
@@ -259,7 +259,7 @@
             <div class="container">
                <h3> Presentations </h3>
                <ul>
-                   <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf"><strong>slides</strong></a>]</li>
+                   <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf"><strong>Slides</strong></a>]</li>
 				   <li>Truck platoon effects on girder bridges, UNL Graduate student symposium, February 2022</li>
 			   </ul>
             </div>
