--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://catalog.unl.edu/graduate-professional/courses/mech/"> MECH 942 - Theory of Plasticity</a> </h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature by using MATLABT. The stress and entropy responses for four thermal loadings were calculated. The developed model generally predicts responses well. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature using MATLAB. The stress and entropy responses for thermal loadings were calculated. The developed model predicts responses well. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
 											</div>
 										</article>
 
@@ -227,7 +227,7 @@
                <h3> Mentoring and Teaching </h3>
 			   <ul> <strong><i>Undergraduatestudent Research Mentoring</i></strong>
                <li>
-					<strong> [Summers 2021 & 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
+					<strong> [Summers 2021 & 2022] </strong> <a href="images/REU2022_Project.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Giovanni Ortiz, San Jose State University<br>
 						-Joshua Trimm, Texas A&M University-Kingsville<br>
 			   </li>
