--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <!-- One -->
          <section id="one">
             <div class="image main" data-position="center">
-               <img src="images/bridge2.jpg" alt="Golden gate bridge" />
+               <img src="images/bridge4.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
 			   <p><strong> My life motto is 'Life may not be as good as you think, but it's not as bad either.'</strong></p>
@@ -167,7 +167,7 @@
 											<a href="#" class="image"><img src="images/CP2.png" alt="" /></a>
 											<div class="inner">
 												<h4></strong> <a href="https://catalog.unl.edu/graduate-professional/courses/mech/"> MECH 942 - Theory of Plasticity</a> </h4>
-												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature using MATLAB. The stress and entropy responses for thermal loadings were calculated. The developed model predicts responses well. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
+												<p style="text-align:justify; text-justify:inter-ideograph;">The mechanical behavior of materials can be affected by different strain histories and temperature histories. The project developed a 1D thermodynamic plasticity model for elastic rubber materials based on the modification of yield load with temperature using MATLAB. The stress and entropy for thermal loadings were calculated. The developed model predicts responses well. Here is a link to the <a href="https://github.com/Bowen2022/MECH-942-Theory-of-Plasticity-Projects"><strong>report and codes</strong></a>.</p>
 											</div>
 										</article>
 
