--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                <li><a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en" class="fa fa-graduation-cap"><span class="label"></span></a></li>
                <li><a href="https://www.linkedin.com/in/bowenyang2022/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> 
                <li><a href="https://github.com/Bowen2022" class="icon brands fa-github"><span class="label">Github</span></a></li>
-               <li><a href="mailto:byang11@huskers.unl.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+               <li><a href="mailto:bowenyang2023@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
          </footer>
       </section>
@@ -85,7 +85,7 @@
                <p><strong><font color='blue'>I will graduate with a PhD in Civil Engineering in August 2023. I am currently looking for a master's degree in computer science that will allow me to gain enough computer knowledge to link traditional civil engineering structures with popular machine learning, computer vision, and artificial intelligence to reduce the likelihood of bridge collapse under heavy loads and improve the efficiency of bridge monitoring.</font></strong></p>
           
                <p style="text-align:center">
-                  <a href="mailto:byang11@huskers.unl.edu">Email</a> &nbsp/&nbsp
+                  <a href="mailto:bowenyang2023@gmail.com">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/bowenyang2022/">LinkedIn</a> &nbsp/&nbsp
                   <a href="images/CV.pdf">CV</a> &nbsp/&nbsp 
@@ -110,7 +110,7 @@
                         <strong>[06/2022]</strong> Our Tech Report "Outdoor Laboratory and Testbed for Bridge Health" has been published by Nebraska Department of Transportation (NDOT) 2022.
                      </li>
                      <li>
-                        <strong>[09/2021]</strong>  Our paper "Safe Platooning Headways on Girder Bridges" has been published by Journal of the Transportation Research Record <a href="https://journals.sagepub.com/home/trr">(TRR)</a> 2021.
+                        <strong>[09/2021]</strong> Our paper "Safe Platooning Headways on Girder Bridges" has been published by Journal of the Transportation Research Record <a href="https://journals.sagepub.com/home/trr">(TRR)</a> 2021.
                      </li>
                      </ul>
                </div>
