--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                <p>My broad areas of interest include truck platoons (a group of connected automated vehicles), structural reliability analysis, diagnostic load testing, and machine learning. My PhD research focuses on truck platoons, data driven analysis, and structural reliability analysis. In particular, I am interested in combining machine learning with civil engineering research (e.g., Image-processing crack detection, computer vision-based bridge monitoring, machine learning-based evaluation of bridge safety).  </p>
 
-               <p><strong><font color='blue'>I will graduate with a PhD in Civil Engineering in August 2023. I am currently looking for a master's degree in computer science that will allow me to gain enough computer knowledge to link traditional civil engineering structures with popular machine learning, computer vision, and artificial intelligence to reduce the likelihood of bridge collapse under heavy loads and improve the efficiency of bridge monitoring.</font></strong></p>
+               <p><strong><font color='blue'>I will graduate with a PhD in Civil Engineering in August 2023. I am currently looking for a master's degree in Computer Science that will allow me to gain enough computer knowledge such as machine learning, computer vision, and artificial intelligence to reduce the probability of bridge collapse under heavy loads and improve the efficiency of bridge monitoring.</font></strong></p>
           
                <p style="text-align:center">
                   <a href="mailto:bowenyang2023@gmail.com">Email</a> &nbsp/&nbsp
@@ -225,13 +225,13 @@
          <section id="six">
             <div class="container">
                <h3> Mentoring and Teaching </h3>
-			   <ul> <strong><i>Undergraduatestudent Research Mentoring</i></strong>
+			   <ul> <strong><i>Undergraduate Student Research Mentoring</i></strong>
                <li>
 					<strong> [Summers 2021 & 2022] </strong> <a href="images/REU2022_Project.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Giovanni Ortiz, San Jose State University<br>
 						-Joshua Trimm, Texas A&M University-Kingsville<br>
 			   </li>
-			        <strong><i>Teaching Assitant</i></strong>
+			        <strong><i>Teaching Assistant</i></strong>
                <li>
 					<strong> [Springs 2021 & 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a><br> 
 					<strong> [Spring 2021] </strong> <a href="images/Sample_solution.pdf"> Sample Solution</a> 
